# Pokenotes

./: .gitignore  Cargo.toml  baka_data.yaml  connections.txt  package-lock.json
front-end/: index.html  package-lock.json  package.json  tailwind.config.js
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/components/: ErrorPath.tsx  Header.tsx
front-end/src/components/Elementals/: ElementalList.tsx  ElementsPages.tsx  ElementsReductionList.tsx  TopFilters.tsx
front-end/src/components/Elementals/buttons/: first.tsx  index.tsx  last.tsx  next.tsx  prev.tsx
front-end/src/components/pokemons/: Pokemons.tsx
front-end/src/store/: actionTypes.ts  store.ts
front-end/src/store/reducers/: elementalElements.ts  pageManager.ts
remove_surreal_prefix_derive/: Cargo.toml
remove_surreal_prefix_derive/src/: lib.rs
src/: config.rs  database.rs  errors.rs  graphql.rs  main.rs  utils.rs
src/database/: bakadata.rs  fill_dummy_data.rs  get_all_games.rs  get_all_pokedexes.rs  get_all_pokemons.rs  reset_db.rs
src/graphql/: schemas.rs
src/graphql/schemas/: game.rs  pokedex.rs  pokemon.rs
src/graphql/schemas/pokedex/: pokedex_entry.rs
src/graphql/schemas/pokemon/: stat.rs
src/routes/: images.rs
src/utils/: mod.rs  try_froms.rs
