[package]
name = "pokenotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors="0.6.2"
actix-web = "4.2.1"
serde = { version = "1.0.144", features = ["derive"] }

# url validation
url = { version = "2", features = ["serde"] } 

# GrapgQl
juniper="0.15.10"
juniper_actix="0.4.0"

# Database
rusqlite = { version = "0.28.0", features = ["bundled"] }

# errors
log="0.4.17"
env_logger="0.9.0"
error-stack="0.2.3"

# generating random url library, usable in graphql
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]