[package]
name = "pokenotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors="0.6.2"
actix-web = "4.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.91"
clap = {version = "4.0.29", features = [ "derive" ]}
directories = "4.0.1"

# url validation
url = { version = "2", features = ["serde"] } 

# GrapgQl
juniper={version = "0.15.10", features=["uuid"]}
juniper_actix="0.4.0"
surrealdb = "1.0.0-beta.8"
# surrealdb = "1.0.0-beta.9" will help a lot
derive = { version = "0.5.0", package = "surrealdb-derive" }

# errors
log="0.4.17"
env_logger="0.10.0"
error-stack="0.2.3"
colored = "2.0.0"

# generating random url library, usable in graphql
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
