[package]
name = "pokenotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors="0.6.2"
actix-web = "4.2.1"
actix-files = "0.6.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.91"
clap = {version = "4.0.29", features = [ "derive" ]}
directories = "4.0.1"

# custom procedural macros
# remove_surreal_prefix_derive = { path = "./remove_surreal_prefix_derive" }

# url validation
url = { version = "2", features = ["serde"] } 

# GrapgQl
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "master" }

# database
# surrealdb = "1.0.0-beta.9" will help a lot
surrealdb = "1.0.0-beta.8"
derive = { version = "0.5.0", package = "surrealdb-derive" }

# errors
log="0.4.17"
env_logger="0.10.0"
error-stack="0.3.1"
colored = "2.0.0"

# generating random url library, usable in graphql
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
